<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/permissionInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/permission_explanation"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <nl.jouwpakket.speedoverlay.SpeedOverlayView
        android:id="@+id/previewOverlay"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permissionInfo" />

    <TextView
        android:id="@+id/transparencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/transparency_label"
        app:layout_constraintStart_toEndOf="@id/previewOverlay"
        app:layout_constraintTop_toTopOf="@id/previewOverlay" />

    <SeekBar
        android:id="@+id/alphaSeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/transparencyLabel"
        app:layout_constraintTop_toBottomOf="@id/transparencyLabel" />

    <TextView
        android:id="@+id/sizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/size_label"
        app:layout_constraintStart_toEndOf="@id/previewOverlay"
        app:layout_constraintTop_toBottomOf="@id/alphaSeek" />

    <SeekBar
        android:id="@+id/sizeSeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="200"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/sizeLabel"
        app:layout_constraintTop_toBottomOf="@id/sizeLabel" />

    <TextView
        android:id="@+id/unitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/unit_label"
        app:layout_constraintStart_toStartOf="@id/previewOverlay"
        app:layout_constraintTop_toBottomOf="@id/previewOverlay" />

    <Spinner
        android:id="@+id/unitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/unitLabel"
        app:layout_constraintTop_toTopOf="@id/unitLabel" />

    <TextView
        android:id="@+id/languageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/language_label"
        app:layout_constraintStart_toStartOf="@id/unitLabel"
        app:layout_constraintTop_toBottomOf="@id/unitLabel" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/languageLabel"
        app:layout_constraintTop_toTopOf="@id/languageLabel" />

    <Button
        android:id="@+id/toggleOverlayButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_overlay"
        app:layout_constraintEnd_toStartOf="@id/exitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageSpinner" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/exit_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toggleOverlayButton"
        app:layout_constraintTop_toTopOf="@id/toggleOverlayButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
